GNOME Bugzilla – Bug 649971
ALT+right click for panel's context menu doesn't work with numlock or capslock on
Last modified: 2011-05-23 21:45:54 UTC
ALT+right click on gnome-panel calls the menu, but sometimes it doesn't appear and I have to relogin
panel.c: modifiers = event->state & GDK_MODIFIER_MASK; please remove GDK_MOD2_MASK (numlock) and GDK_LOCK_MASK (capslock) from the mask
I had a fix for this that was never committed; I just pushed it.