gnome-panel/panel-util.c
@@ -1117,8 +1117,11 @@ panel_util_key_event_is_binding (GdkEventKey *event,
 	GtkBindingEntry *binding_entry;
 	gboolean         popup = FALSE;
 	gboolean         popup_modifier = FALSE;
+	guint            modifiers;
 	char            *signal_dash;
 	char            *signal_underscore;
+
+	modifiers = event->state & gtk_accelerator_get_default_mod_mask ();
 
 	signal_dash = g_strdup (signal_name);
 	g_strdelimit (signal_dash, "_", '-');
@@ -1140,8 +1143,8 @@ panel_util_key_event_is_binding (GdkEventKey *event,
 				if (binding_entry->keyval != event->keyval)
 					break;
 
-				popup = (event->state & GDK_MODIFIER_MASK) == binding_entry->modifiers;
-				popup_modifier = (event->state & GDK_MODIFIER_MASK) == (panel_bindings_get_mouse_button_modifier_keymask ()|binding_entry->modifiers);
+				popup = modifiers == binding_entry->modifiers;
+				popup_modifier = modifiers == (panel_bindings_get_mouse_button_modifier_keymask ()|binding_entry->modifiers);
 				break;
 			}
 		}
